--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 group 'gazman'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
+apply plugin: "java-library"
 
 sourceCompatibility = 1.8
 
@@ -10,5 +10,5 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'junit', name: 'junit', version: '4.13'
 }
